<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_200"
    android:padding="30dp"
    tools:context=".LoginActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    tools:ignore="UselessParent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="30dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/masuk"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/black"
                android:text="@string/email"
                android:textColor = "?android:textColorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_email_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_edittext"
                android:padding="12dip"
                tools:ignore="LabelFor"
                android:autofillHints="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor = "?android:textColorPrimary"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="textPassword"
                    android:padding="7dip" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lupa_sandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:textColor = "?android:textColorPrimary"
                android:text="@string/lupa_sandi" />

            <TextView
                android:id="@+id/tvToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/login_text"
                android:textColor="?android:textColorPrimary" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#6D9773"
                android:text="@string/masuk"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/rounded_button"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
</RelativeLayout>