<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.catatan.transaksi.FormActivity">

    <LinearLayout
        android:id="@+id/toolbarLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:paddingTop="25dp"
            android:text="@string/transaksi"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLinear">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <RadioGroup
                android:id="@+id/typeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                android:gravity="left"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <RadioButton
                    android:id="@+id/rbExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/radio_select_pengeluaran"
                    android:button="@drawable/radio_button_null"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingHorizontal="28dp"
                    android:text="@string/pengeluaran2"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rbIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_not_select"
                    android:button="@drawable/radio_button_null"
                    android:gravity="center"
                    android:paddingHorizontal="28dp"
                    android:text="@string/pemasukan"
                    android:textColor="@color/black"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/typeRadioGroup"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/typeRadioGroup"
                    android:drawableStart="@drawable/ic_rupiah"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/jumlah"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:maxLength= "10"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/amountTIL"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/amount"
                    android:drawableStart="@drawable/ic_baseline_title_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/judul"
                    android:inputType="text|textCapWords"
                    android:textColor="@color/black"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleTIL"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_format_list_bulleted_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/kategori"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryTIL"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/categoryTIL"
                    android:drawableStart="@drawable/ic_baseline_calendar_month_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="date"
                    android:text="@string/tanggal"
                    android:textColor="#717171"
                    android:textColorHint="@color/black"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/dateTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="30dp"
                android:text="@string/simpan"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="20dp" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>