...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_menu"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="17dp"
...
